--- a/Index/Tpl/Public/css/style.css
+++ b/Index/Tpl/Public/css/style.css
@@ -838,6 +838,12 @@ a:hover {
 	overflow: hidden;
 	background-color: #FFFFFF;
 }
+.top_News li.News_right1 {
+	float: left;
+	 
+	overflow: hidden;
+	background-color: #FFFFFF;
+}
 .News_images {
 	width: 200px;
 }
