--- a/Index/Tpl/Public/css/style.css
+++ b/Index/Tpl/Public/css/style.css
@@ -844,6 +844,12 @@ a:hover {
 	overflow: hidden;
 	background-color: #FFFFFF;
 }
+.top_News li.News_right2 {
+	 
+	 
+	overflow: hidden;
+	background-color: #FFFFFF;
+}
 .News_images {
 	width: 200px;
 }
